--- a/www/home.html
+++ b/www/home.html
@@ -15,82 +15,40 @@
 <header>
   <div class="profileLogo"> 
     <!-- Profile logo. Add a img tag in place of <span>. -->
-    <p class="logoPlaceholder"><!-- <img src="logoImage.png" alt="sample logo"> --><span>LOGO</span></p>
+    <p class="logoPlaceholder"><!-- <img src="logoImage.png" alt="sample logo"> --><span>RASMUSSEN COLLEGE</span></p>
   </div>
-  <div class="profilePhoto"> 
-    <!-- Profile photo --> 
-    <img src="../AppData/Roaming/Adobe/Dreamweaver CC 2017/en_US/Co
-    nfiguration/Temp/Assets/eamEE2D.tmp/AboutPageAssets/images/profilephoto.png" alt="sample"> </div>
+  
   <!-- Identity details -->
   <section class="profileHeader">
-    <h1>JOHN DOE</h1>
-    <a href="../Documents/index.html">Course Offering</a>
-    <h3>REALLY AWESOME WEB DESIGNER</h3>
+    <h1>Education on your finger tips</h1>
+    <h3>College Details</h3>
     <hr>
-    <p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum Loremdolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
+    <p> Description goes here</p>
   </section>
   <!-- Links to Social network accounts -->
-  <aside class="socialNetworkNavBar">
-    <div class="socialNetworkNav"> 
-      <!-- Add a Anchor tag with nested img tag here --> 
-      <img src="../Documents/AboutPageAssets/images/social.png" alt="sample"> </div>
-    <div class="socialNetworkNav"> 
-      <!-- Add a Anchor tag with nested img tag here --> 
-      <img src="../Documents/AboutPageAssets/images/social.png"  alt="sample"> </div>
-    <div class="socialNetworkNav"> 
-      <!-- Add a Anchor tag with nested img tag here --> 
-      <img src="../Documents/AboutPageAssets/images/social.png"  alt="sample"> </div>
-    <div class="socialNetworkNav"> 
-      <!-- Add a Anchor tag with nested img tag here --> 
-      <img src="../Documents/AboutPageAssets/images/social.png"  alt="sample"> </div>
-  </aside>
+
 </header>
 <!-- content -->
 <section class="mainContent"> 
   <!-- Contact details -->
   <section class="section1">
-    <h2 class="sectionTitle">Content Holder 1</h2>
+    <h2 class="sectionTitle">Contact Us</h2>
     <hr class="sectionTitleRule">
     <hr class="sectionTitleRule2">
     <div class="section1Content">
-      <p><span>Email :</span> johndoe@email.com</p>
-      <p><span>Website :</span> johndoe.com</p>
-      <p><span>Phone :</span> (123)456 - 789000</p>
-      <p><span>Address :</span> Anytown, Anycountry</p>
+      <p><span>Email :</span> college@email.com</p>
+      <p><span>Website :</span> https://engage.rasmussen.edu</p>
+      <p><span>Phone :</span> xxx-xxx-xxxx</p>
+      <p><span>Address :</span> Illinios,USA</p>
     </div>
   </section>
   <!-- Previous experience details -->
-  <section class="section2">
-    <h2 class="sectionTitle">Content Holder 2</h2>
-    <hr class="sectionTitleRule">
-    <hr class="sectionTitleRule2">
-    <!-- First Title & company details  -->
-    <article class="section2Content">
-      <h2 class="sectionContentTitle">Title & Company</h2>
-      <h3 class="sectionContentSubTitle">Position / Date - Year</h3>
-      <p class="sectionContent"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse <a href="New folder (12)">New folder (12)</a>molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. </p>
-    </article>
-    <!-- Second Title & company details  -->
-    <article class="section2Content">
-      <h2 class="sectionContentTitle"> Title & Company</h2>
-      <h3 class="sectionContentSubTitle">Position / Date - Year</h3>
-      <p class="sectionContent"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. </p>
-    </article>
-    <!-- Replicate the above Div block to add more title and company details --> 
+ 
   </section>
-  <!-- Links to expore your past projects and download your CV -->
-  <aside class="externalResourcesNav">
-    <div class="externalResources"> <a href="#" title="Download CV Link">DOWNLOAD CV</a> </div>
-    <span class="stretch"></span>
-    <div class="externalResources"><a href="#" title="Behance Link">BEHANCE</a> </div>
-    <span class="stretch"></span>
-    <div class="externalResources"><a href="#" title="Github Link">GITHUB</a> </div>
-  </aside>
-</section>
 <footer>
   <hr>
-  <p class="footerDisclaimer">2014  Copyrights - <span>All Rights Reserved</span></p>
-  <p class="footerNote">John Doe - <span>Email me</span></p>
+  <p class="footerDisclaimer">2016 Copyrights - <span>All Rights Reserved</span></p>
+  <p class="footerNote">RASMUSSEN COLLEGE - <span>Email Us</span></p>
 </footer>
 </body>
 </html>
