--- a/www/home.html
+++ b/www/home.html
@@ -21,9 +21,9 @@
   <!-- Identity details -->
   <section class="profileHeader">
     <h1>Education on your finger tips</h1>
-    <h3>College Details</h3>
+    <h3>Walter Rasmussen founded Rasmussen College with a mission to help students build better lives through career-focused education. More than a century later, our focus remains the same because we continue to put our students first.</h3>
     <hr>
-    <p> Description goes here    </p>
+    <p> An affordable education that fits your life.   </p>
   </section>
   <!-- Links to Social network accounts -->
 
