--- a/www/index.html
+++ b/www/index.html
@@ -11,11 +11,11 @@
     </head>
     <body>
         <div class="app">
-            <h1>PhoneGap</h1>
+            <h1>Rasmussen College</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">College site</p>
                 <p class="event received">Device is Ready and you can click on below link </p>
-                <a href="home.html">College Home</a>
+                <a href="home.html"><font style="font-size: 40px;">College Home</font></a>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
