--- a/www/home.html
+++ b/www/home.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Page template By Adobe Dreamweaver CC</title>
+<title>Rasmussen College</title>
 <link href="css/aboutPageStyle.css" rel="stylesheet" type="text/css">
-
+<link href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" rel="stylesheet" type="text/css"/>
+<link href="styles/custom.css" rel="stylesheet" type="text/css">
+<script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js" type="text/javascript"></script>
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
 </head>
@@ -15,7 +18,7 @@
 <header>
   <div class="profileLogo"> 
     <!-- Profile logo. Add a img tag in place of <span>. -->
-    <p class="logoPlaceholder"><!-- <img src="logoImage.png" alt="sample logo"> --><span>RASMUSSEN COLLEGE</span></p>
+    <p class="logoPlaceholder"><img src="rasmussen_logo[1].png" alt="RasmussenLogo"> <!-- <span>RASMUSSEN COLLEGE</span>--></p>
   </div>
   
   <!-- Identity details -->
@@ -30,6 +33,22 @@
 </header>
 <!-- content -->
 <section class="mainContent"> 
+  <div id="page" data-role="page" data-theme="b">
+	<div data-role="content">	
+		<ul data-role="listview" data-theme="c">
+			<li><a href="#section1">Course Offering</a></li>
+            <li><a href="#section2">Profosser Details</a></li>
+			<li><a href="#section3">Contact Us</a></li>
+		</ul>		
+	</div>
+	<footer>
+  <hr>
+  <p class="footerDisclaimer">2016 Copyrights - <span>All Rights Reserved</span></p>
+  <p class="footerNote">RASMUSSEN COLLEGE - <span>Email Us</span></p>
+</footer>
+</div>
+  
+  
   <!-- Contact details -->
   <section class="section1">
     <h2 class="sectionTitle">Contact Us</h2>
@@ -45,10 +64,6 @@
   <!-- Previous experience details -->
  
   </section>
-<footer>
-  <hr>
-  <p class="footerDisclaimer">2016 Copyrights - <span>All Rights Reserved</span></p>
-  <p class="footerNote">RASMUSSEN COLLEGE - <span>Email Us</span></p>
-</footer>
+
 </body>
 </html>
