--- a/www/home.html
+++ b/www/home.html
@@ -1,69 +1,106 @@
-<!doctype html>
+<!DOCTYPE html> 
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
 <title>Rasmussen College</title>
-<link href="css/aboutPageStyle.css" rel="stylesheet" type="text/css">
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <link href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" rel="stylesheet" type="text/css"/>
-<link href="styles/custom.css" rel="stylesheet" type="text/css">
+<link href="css/custom.css" rel="stylesheet" type="text/css">
 <script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js" type="text/javascript"></script>
-<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
-<script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
-</head>
 
-<body>
-<!-- Header content -->
-<header>
-  <div class="profileLogo"> 
-    <!-- Profile logo. Add a img tag in place of <span>. -->
-    <p class="logoPlaceholder"><img src="rasmussen_logo[1].png" alt="RasmussenLogo"> <!-- <span>RASMUSSEN COLLEGE</span>--></p>
-  </div>
-  
-  <!-- Identity details -->
-  <section class="profileHeader">
-    <h1>Education on your finger tips</h1>
-    <h3>Walter Rasmussen founded Rasmussen College with a mission to help students build better lives through career-focused education. More than a century later, our focus remains the same because we continue to put our students first.</h3>
-    <hr>
-    <p> An affordable education that fits your life.   </p>
-  </section>
-  <!-- Links to Social network accounts -->
+</head> 
+<body> 
 
-</header>
-<!-- content -->
-<section class="mainContent"> 
-  <div id="page" data-role="page" data-theme="b">
+<div id="page" data-role="page" data-theme="b">
+	<div data-role="header" data-theme="b">
+	  <div class="logo"><img src="img/rasmussen_logo.png" width="218" height="45" alt=""/></div>
+	</div>
 	<div data-role="content">	
 		<ul data-role="listview" data-theme="c">
-			<li><a href="#section1">Course Offering</a></li>
-            <li><a href="#section2">Profosser Details</a></li>
-			<li><a href="#section3">Contact Us</a></li>
+			<li><a href="#section1">College Details</a></li>
+            <li><a href="#section2">Course Offereing</a></li>
+			<li><a href="#section3">Professor Details</a></li>
+			<li><a href="#section4">Contact Us</a></li>
 		</ul>		
 	</div>
-	<footer>
-  <hr>
-  <p class="footerDisclaimer">2016 Copyrights - <span>All Rights Reserved</span></p>
-  <p class="footerNote">RASMUSSEN COLLEGE - <span>Email Us</span></p>
-</footer>
+	<div data-role="footer" data-theme="b">
+	  <h4>Rasmussen College &copy; 2015</h4>
+	</div>
 </div>
-  
-  
-  <!-- Contact details -->
-  <section class="section1">
-    <h2 class="sectionTitle">Contact Us</h2>
-    <hr class="sectionTitleRule">
-    <hr class="sectionTitleRule2">
-    <div class="section1Content">
-      <p><span>Email :</span> college@email.com</p>
-      <p><span>Website :</span> https://engage.rasmussen.edu</p>
-      <p><span>Phone :</span> xxx-xxx-xxxx</p>
-      <p><span>Address :</span> Illinios,USA</p>
-    </div>
-  </section>
-  <!-- Previous experience details -->
- 
-  </section>
+
+<div id="section1" data-role="page" data-theme="b">
+	<div data-role="header" data-theme="b">
+	  <h1>College Details</h1>
+		<a href="home.html" style="color:black">Back</a>  
+	</div>
+	<div data-role="content">
+	  <h3>College History</h3>
+	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
+	 	</div>
+	<div data-role="footer" data-theme="b">
+	  <h4>Rasmussen College &copy; 2015</h4>
+	</div>
+</div>
+
+<div id="section2" data-role="page" data-theme="b">
+	<div data-role="header" data-theme="b">
+		<h1>Section 2</h1>
+	</div>
+	<div data-role="content">	
+	  <h3>Header</h3>
+	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
+	  <h3>Header</h3>
+	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
+	</div>
+	<div data-role="footer" data-theme="b">
+		<h4>Your App &copy; 2015</h4>
+	</div>
+</div>
+
+<div id="section3" data-role="page" data-theme="b">
+	<div data-role="header" data-theme="b">
+		<h1>Section 3</h1>
+	</div>
+	<div data-role="content">	
+	  <h3>Header</h3>
+	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
+	  <h3>Header</h3>
+	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
+      </div>
+	<div data-role="footer" data-theme="b">
+	  <h4>Your App &copy; 2015</h4>
+	</div>
+</div>
+
+<div data-role="page" id="section4" data-theme="b">
+	<div data-role="header" data-theme="b">
+		<h1>Section 4</h1>
+	</div>
+  <div data-role="content">	
+	  <h3>Header</h3>
+	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
+	  <h3>Header</h3>
+	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
+	</div>
+	<div data-role="footer" data-theme="b">
+		<h4>Your App &copy; 2015</h4>
+	</div>
+</div>
+<div data-role="page" id="section5" data-theme="b">
+	<div data-role="header" data-theme="b">
+		<h1>Section 5</h1>
+	</div>
+  <div data-role="content">	
+	  <h3>Header</h3>
+	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
+	  <h3>Header</h3>
+	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
+	</div>
+	<div data-role="footer" data-theme="b">
+		<h4>Rassmussen College; 2015</h4>
+	</div>
+</div>
 
 </body>
 </html>
