--- a/www/home.html
+++ b/www/home.html
@@ -14,7 +14,7 @@
 
 <div id="page" data-role="page" data-theme="b">
 	<div data-role="header" data-theme="b">
-	  <div class="logo"><img src="img/rasmussen_logo.png" width="218" height="45" alt=""/></div>
+	  <div class="logo"><img src="img/rasmussen_logo[1].png" width="218" height="45" alt=""/></div>
 	</div>
 	<div data-role="content">	
 		<ul data-role="listview" data-theme="c">
