--- a/www/home.html
+++ b/www/home.html
@@ -19,12 +19,12 @@
 	<div data-role="content">	
 		<ul data-role="listview" data-theme="c">
 			<li><a href="#section1">College Details</a></li>
-            <li><a href="#section2">Course Offereing</a></li>
+            <li><a href="#section2">Course Offering</a></li>
 			<li><a href="#section3">Professor Details</a></li>
 			<li><a href="#section4">Contact Us</a></li>
 		</ul>		
 	</div>
-	<div data-role="footer" data-theme="b">
+	<div data-role="footer"  style=" bottom:0;" data-theme="b">
 	  <h4>Rasmussen College &copy; 2015</h4>
 	</div>
 </div>
@@ -38,69 +38,61 @@
 	  <h3>College History</h3>
 	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
 	 	</div>
-	<div data-role="footer" data-theme="b">
+	<div data-role="footer"  style=" bottom:0;" data-theme="b">
 	  <h4>Rasmussen College &copy; 2015</h4>
 	</div>
 </div>
 
 <div id="section2" data-role="page" data-theme="b">
 	<div data-role="header" data-theme="b">
-		<h1>Section 2</h1>
+		<h1>Course Offering</h1>
+		<a href="home.html" style="color:black">Back</a>  
 	</div>
 	<div data-role="content">	
-	  <h3>Header</h3>
+	  <h3>CS530 Web Development</h3>
 	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
-	  <h3>Header</h3>
+	  <h3>CS 691 Database Mangement</h3>
 	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
 	</div>
-	<div data-role="footer" data-theme="b">
-		<h4>Your App &copy; 2015</h4>
+<div data-role="footer"  style=" bottom:0;" data-theme="b">
+	  <h4>Rasmussen College &copy; 2015</h4>
 	</div>
 </div>
 
 <div id="section3" data-role="page" data-theme="b">
 	<div data-role="header" data-theme="b">
-		<h1>Section 3</h1>
+		<h1>Professor Details</h1>
+		<a href="home.html" style="color:black">Back</a>  
 	</div>
 	<div data-role="content">	
-	  <h3>Header</h3>
+	  <h3>Professor XYZ</h3>
 	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
-	  <h3>Header</h3>
+	  <h3>Professor MNO</h3>
 	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
       </div>
-	<div data-role="footer" data-theme="b">
-	  <h4>Your App &copy; 2015</h4>
+	<div data-role="footer" style=" bottom:0;" data-theme="b">
+	   <h4>Rasmussen College &copy; 2015</h4>
 	</div>
 </div>
 
 <div data-role="page" id="section4" data-theme="b">
 	<div data-role="header" data-theme="b">
-		<h1>Section 4</h1>
+		<h1>Contact Us</h1>
+		<a href="home.html" style="color:black">Back</a> 
 	</div>
   <div data-role="content">	
-	  <h3>Header</h3>
-	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
-	  <h3>Header</h3>
-	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
+	  <h4>Address :</h4>
+	  <p> Chicago IL</p>
+	  <h4>Email   :</h4>
+	  <p>RasmussenCollegeContactUS@rasmussen.edu</p>
+	  <h4>Contact :</h4>
+	  <p>000-000-0000</p>
 	</div>
-	<div data-role="footer" data-theme="b">
-		<h4>Your App &copy; 2015</h4>
-	</div>
-</div>
-<div data-role="page" id="section5" data-theme="b">
-	<div data-role="header" data-theme="b">
-		<h1>Section 5</h1>
-	</div>
-  <div data-role="content">	
-	  <h3>Header</h3>
-	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
-	  <h3>Header</h3>
-	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
-	</div>
-	<div data-role="footer" data-theme="b">
-		<h4>Rassmussen College; 2015</h4>
+	<div data-role="footer"  style=" bottom:0;" data-theme="b">
+		<h4>Rasmussen College &copy; 2015</h4>
 	</div>
 </div>
+
 
 </body>
 </html>
