--- a/www/home.html
+++ b/www/home.html
@@ -20,7 +20,7 @@
 		<ul data-role="listview" data-theme="c">
 			<li><a href="#section1">College Details</a></li>
             <li><a href="#section2">Course Offering</a></li>
-			<li><a href="#section3">Professor Details</a></li>
+			<li><a href="#section3">Locations</a></li>
 			<li><a href="#section4">Contact Us</a></li>
 		</ul>		
 	</div>
@@ -36,7 +36,7 @@
 	</div>
 	<div data-role="content">
 	  <h3>College History</h3>
-	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
+	  <p> Walter Rasmussen founded Rasmussen College at the turn of the century, to meet the needs of a growing business environment. Originally named the Rasmussen Practical School of Business, the first campus opened its doors in 1900 in Stillwater, Minnesota. The college was a welcome addition to the city’s landscape, where the promise of top-notch secretarial and accounting programs gave eager new students the skills to succeed in the new business climate. </p>
 	 	</div>
 	<div data-role="footer"  style=" bottom:0;" data-theme="b">
 	  <h4>Rasmussen College &copy; 2015</h4>
