--- a/www/home.html
+++ b/www/home.html
@@ -61,7 +61,7 @@
 
 <div id="section3" data-role="page" data-theme="b">
 	<div data-role="header" data-theme="b">
-		<h1>Professor Details</h1>
+		<h1>Locations</h1>
 		<a href="home.html" style="color:black">Back</a>  
 	</div>
 	<div data-role="content">	
