--- a/www/home.html
+++ b/www/home.html
@@ -49,10 +49,10 @@
 		<a href="home.html" style="color:black">Back</a>  
 	</div>
 	<div data-role="content">	
-	  <h3>CS530 Web Development</h3>
-	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
-	  <h3>CS 691 Database Mangement</h3>
-	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
+	  <h3>cs 630 Computer Science</h3>
+	  <p> Using technology from Amazon, Apple and Microsoft, the Computer Science program provides you with a foundation in mobile, analytics and cloud computing few other programs can match. </p>
+	  <h3>CS 691 Information Security</h3>
+	  <p> Our Information Security Bachelor's degree provides the security knowledge and investigative skills you need to enter this specialized area of technology </p>
 	</div>
 <div data-role="footer"  style=" bottom:0;" data-theme="b">
 	  <h4>Rasmussen College &copy; 2015</h4>
@@ -65,10 +65,10 @@
 		<a href="home.html" style="color:black">Back</a>  
 	</div>
 	<div data-role="content">	
-	  <h3>Professor XYZ</h3>
-	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
-	  <h3>Professor MNO</h3>
-	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec massa tincidunt, porttitor enim sit amet, pellentesque nunc. Proin varius mollis ultricies. In aliquam dapibus orci, quis dictum dui sollicitudin vel. Vivamus nec malesuada leo. Nulla est orci, ornare ut ultricies a, bibendum in sem. Donec convallis pharetra ligula in malesuada. Ut hendrerit dui et aliquam dignissim. Aenean a metus eget felis tempor pellentesque nec iaculis ipsum. </p>
+	  <h3>Minnesota</h3>
+	  <p>Blaine Campus, Bloomington Campus, Brooklyn Park/Maple Grove Campus, Eagan Campus, Lake Elmo/Woodbury Campus, Mankato Campus, Moorhead Campus, St. Cloud Campus </p>
+	  <h3>Illinois</h3>
+	  <p>Aurora/Naperville Campus, Mokena/Tinley Park Campus, Rockford Campus, Romeoville/Joliet Campus</p>
       </div>
 	<div data-role="footer" style=" bottom:0;" data-theme="b">
 	   <h4>Rasmussen College &copy; 2015</h4>
