--- a/www/home.html
+++ b/www/home.html
@@ -38,6 +38,7 @@
 	  <h3>College History</h3>
 	  <p> Walter Rasmussen founded Rasmussen College at the turn of the century, to meet the needs of a growing business environment. Originally named the Rasmussen Practical School of Business, the first campus opened its doors in 1900 in Stillwater, Minnesota. The college was a welcome addition to the city’s landscape, where the promise of top-notch secretarial and accounting programs gave eager new students the skills to succeed in the new business climate. </p>
 	 	</div>
+	<input type="text" name="yourname" size="25" maxlength="60" />
 	<div data-role="footer"  style=" bottom:0;" data-theme="b">
 	  <h4>Rasmussen College &copy; 2015</h4>
 	</div>
