--- a/www/home.html
+++ b/www/home.html
@@ -82,12 +82,23 @@
 		<a href="home.html" style="color:black">Back</a> 
 	</div>
   <div data-role="content">	
-	  <h4>Address :</h4>
-	  <p> Chicago IL</p>
-	  <h4>Email   :</h4>
-	  <p>RasmussenCollegeContactUS@rasmussen.edu</p>
-	  <h4>Contact :</h4>
-	  <p>000-000-0000</p>
+<h4> Contact Via : </h4>
+<form action="#">
+  <p>    Email :     <input type="text" name="Email" value="Email"> </p><br>
+<p> Country : </p> <br>
+<select name="Country" id="countryName">
+  <option value="USA">USA</option>
+  <option value="IND">IND</option>
+  <option value="ENG">ENG</option>
+  <option value="AUS">AUS</option>
+</select>
+<p>Mobilde Number :     <input type="text" name="lastname" value="Mouse"> </p> <br>
+<p>Contact Via : </p> <br>
+<label><input type="checkbox" id="emailcheck" value="first_checkbox"> Email </label><br>
+<label><input type="checkbox" id="mobilecheck" value="first_checkbox"> Mobile </label><br>
+
+    <input type="submit" value="Submit">
+</form>	
 	</div>
 	<div data-role="footer"  style=" bottom:0;" data-theme="b">
 		<h4>Rasmussen College &copy; 2015</h4>
