--- a/www/home.html
+++ b/www/home.html
@@ -92,7 +92,7 @@
   <option value="ENG">ENG</option>
   <option value="AUS">AUS</option>
 </select>
-<p>Mobilde Number :     <input type="text" name="lastname" value="Mouse"> </p> <br>
+<p>Mobilde Number :     <input type="text" name="lastname" value="Mobile #"> </p> <br>
 <p>Contact Via : </p> <br>
 <label><input type="checkbox" id="emailcheck" value="first_checkbox"> Email </label><br>
 <label><input type="checkbox" id="mobilecheck" value="first_checkbox"> Mobile </label><br>
