--- a/www/home.html
+++ b/www/home.html
@@ -84,19 +84,20 @@
   <div data-role="content">	
 <h4> Contact Via : </h4>
 <form action="#">
-  <p>    Email :     <input type="text" name="Email" value="Email"> </p><br>
-<p> Country : </p> <br>
+	<p>    Email :     <input type="text" name="Email" value="Email"> </p>
+<p> Country : 
 <select name="Country" id="countryName">
   <option value="USA">USA</option>
   <option value="IND">IND</option>
   <option value="ENG">ENG</option>
   <option value="AUS">AUS</option>
-</select>
-<p>Mobilde Number :     <input type="text" name="lastname" value="Mobile #"> </p> <br>
-<p>Contact Via : </p> <br>
-<label><input type="checkbox" id="emailcheck" value="first_checkbox"> Email </label><br>
-<label><input type="checkbox" id="mobilecheck" value="first_checkbox"> Mobile </label><br>
-
+</select></p>
+<p>Mobilde Number :     <input type="text" name="lastname" value="Mobile #"> </p> 
+<p>Contact Via :
+<label><input type="checkbox" id="emailcheck" value="first_checkbox"> Email </label>
+<label><input type="checkbox" id="mobilecheck" value="first_checkbox"> Mobile </label>
+	</p>
+<br>
     <input type="submit" value="Submit">
 </form>	
 	</div>
