--- a/www/home.html
+++ b/www/home.html
@@ -8,6 +8,26 @@
 <link href="css/custom[1].css" rel="stylesheet" type="text/css">
 <script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js" type="text/javascript"></script>
+<script>
+function myFunction() {
+    var firstName = document.getElementById("fname");
+    if (inpObj.checkValidity() == false) {
+        document.getElementById("demo").innerHTML = inpObj.validationMessage;  
+  } 
+    var firstName = document.getElementById("lname");
+    if (inpObj.checkValidity() == false) {
+        document.getElementById("demo").innerHTML = inpObj.validationMessage;  
+  } 
+var firstName = document.getElementById("mobile");
+    if (inpObj.checkValidity() == false) {
+        document.getElementById("demo").innerHTML = inpObj.validationMessage;  
+  } 
+var firstName = document.getElementById("home");
+    if (inpObj.checkValidity() == false) {
+        document.getElementById("demo").innerHTML = inpObj.validationMessage;  
+  } 
+} 
+</script>
 
 </head> 
 <body> 
@@ -76,7 +96,38 @@
 	</div>
 </div>
 
-<div data-role="page" id="section4" data-theme="b">
+	
+<div id="section4" data-role="page" data-theme="b">
+	<div data-role="header" data-theme="b">
+		<h1>Student Registration</h1>
+<h4> Contact Via : </h4>
+<form action="#">
+<p id="demo" style="color:red"></p>
+	<p>    First Nmame :     <input type="text" name="fname" value="First Name" id="fname"> </p>
+		<p>    Last Nmame :     <input type="text" name="lname" value="Last Name" id="lname"> </p>
+<p> Country : 
+<select name="Country" id="countryName">
+<option value="USA">USA</option>
+  <option value="IND">IND</option>
+  <option value="ENG">ENG</option>
+  <option value="AUS">AUS</option>
+</select></p>
+<p>Mobilde Number :     <input type="text" name="MobileNumber" value="Mobile #" id="mobile"> </p> 
+	<p>Home Number :     <input type="text" name="HomeNumber" value="Home #" id="home"> </p> 
+<p>Contact Via :
+<label><input type="checkbox" id="emailcheck" value="first_checkbox"> Home </label>
+<label><input type="checkbox" id="mobilecheck" value="first_checkbox"> Mobile </label>
+	</p>
+<br>
+    <input type="submit" value="Submit" onclick="myFunction()">
+</form>
+	</div>
+	<div data-role="footer" style=" bottom:0;" data-theme="b">
+	   <h4>Rasmussen College &copy; 2015</h4>
+	</div>
+	</div>
+	
+<div data-role="page" id="section5" data-theme="b">
 	<div data-role="header" data-theme="b">
 		<h1>Contact Us</h1>
 		<a href="home.html" style="color:black">Back</a> 
