--- a/www/home.html
+++ b/www/home.html
@@ -41,7 +41,8 @@ var firstName = document.getElementById("home");
 			<li><a href="#section1">College Details</a></li>
             <li><a href="#section2">Course Offering</a></li>
 			<li><a href="#section3">Locations</a></li>
-			<li><a href="#section4">Contact Us</a></li>
+			<li><a href="#section4">Student Registration</a></li>
+			<li><a href="#section5">Contact Us</a></li>
 		</ul>		
 	</div>
 	<div data-role="footer"  style=" bottom:0;" data-theme="b">
@@ -103,8 +104,8 @@ var firstName = document.getElementById("home");
 <h4> Contact Via : </h4>
 <form action="#">
 <p id="demo" style="color:red"></p>
-	<p>    First Nmame :     <input type="text" name="fname" value="First Name" id="fname"> </p>
-		<p>    Last Nmame :     <input type="text" name="lname" value="Last Name" id="lname"> </p>
+	<p>    First Nmame :     <input type="text" name="fname" placeholder="First Name" id="fname"> </p>
+		<p>    Last Nmame :     <input type="text" name="lname" placeholder="Last Name" id="lname"> </p>
 <p> Country : 
 <select name="Country" id="countryName">
 <option value="USA">USA</option>
@@ -112,15 +113,15 @@ var firstName = document.getElementById("home");
   <option value="ENG">ENG</option>
   <option value="AUS">AUS</option>
 </select></p>
-<p>Mobilde Number :     <input type="text" name="MobileNumber" value="Mobile #" id="mobile"> </p> 
-	<p>Home Number :     <input type="text" name="HomeNumber" value="Home #" id="home"> </p> 
+<p>Mobilde Number :     <input type="text" name="MobileNumber" placeholder="Mobile #" id="mobile"> </p> 
+	<p>Home Number :     <input type="text" name="HomeNumber" placeholder="Home #" id="home"> </p> 
 <p>Contact Via :
 <label><input type="checkbox" id="emailcheck" value="first_checkbox"> Home </label>
 <label><input type="checkbox" id="mobilecheck" value="first_checkbox"> Mobile </label>
 	</p>
 <br>
     <input type="submit" value="Submit" onclick="myFunction()">
-</form>
+</form>	
 	</div>
 	<div data-role="footer" style=" bottom:0;" data-theme="b">
 	   <h4>Rasmussen College &copy; 2015</h4>
