--- a/www/home.html
+++ b/www/home.html
@@ -8,26 +8,7 @@
 <link href="css/custom[1].css" rel="stylesheet" type="text/css">
 <script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js" type="text/javascript"></script>
-<script>
-function myFunction() {
-    var firstName = document.getElementById("fname");
-    if (inpObj.checkValidity() == false) {
-        document.getElementById("demo").innerHTML = inpObj.validationMessage;  
-  } 
-    var firstName = document.getElementById("lname");
-    if (inpObj.checkValidity() == false) {
-        document.getElementById("demo").innerHTML = inpObj.validationMessage;  
-  } 
-var firstName = document.getElementById("mobile");
-    if (inpObj.checkValidity() == false) {
-        document.getElementById("demo").innerHTML = inpObj.validationMessage;  
-  } 
-var firstName = document.getElementById("home");
-    if (inpObj.checkValidity() == false) {
-        document.getElementById("demo").innerHTML = inpObj.validationMessage;  
-  } 
-} 
-</script>
+
 
 </head> 
 <body> 
@@ -100,12 +81,12 @@ var firstName = document.getElementById("home");
 	
 <div id="section4" data-role="page" data-theme="b">
 	<div data-role="header" data-theme="b">
-		<h1>Student Registration</h1>
-<h4> Contact Via : </h4>
+		<h4>Student Registration</h4>
+		<a href="home.html" style="color:black">Back</a> 
 <form action="#">
 <p id="demo" style="color:red"></p>
-	<p>    First Nmame :     <input type="text" name="fname" placeholder="First Name" id="fname"> </p>
-		<p>    Last Nmame :     <input type="text" name="lname" placeholder="Last Name" id="lname"> </p>
+	<p>    First Nmame :     <input type="text" name="fname" placeholder="First Name" id="fname" required> </p>
+		<p>    Last Nmame :     <input type="text" name="lname" placeholder="Last Name" id="lname" required> </p>
 <p> Country : 
 <select name="Country" id="countryName">
 <option value="USA">USA</option>
@@ -113,14 +94,14 @@ var firstName = document.getElementById("home");
   <option value="ENG">ENG</option>
   <option value="AUS">AUS</option>
 </select></p>
-<p>Mobilde Number :     <input type="text" name="MobileNumber" placeholder="Mobile #" id="mobile"> </p> 
-	<p>Home Number :     <input type="text" name="HomeNumber" placeholder="Home #" id="home"> </p> 
+<p>Mobile Number :     <input type="text" name="MobileNumber" placeholder="Mobile #" id="mobile" required> </p> 
+	<p>Home Number :     <input type="text" name="HomeNumber" placeholder="Home #" id="home" required> </p> 
 <p>Contact Via :
 <label><input type="checkbox" id="emailcheck" value="first_checkbox"> Home </label>
 <label><input type="checkbox" id="mobilecheck" value="first_checkbox"> Mobile </label>
 	</p>
 <br>
-    <input type="submit" value="Submit" onclick="myFunction()">
+    <input type="submit" value="Submit">
 </form>	
 	</div>
 	<div data-role="footer" style=" bottom:0;" data-theme="b">
