Adding changes to home.htnl

--- a/www/home.html
+++ b/www/home.html
@@ -60,7 +60,8 @@ function validateForm() {
             <li><a href="#section2">Course Offering</a></li>
 			<li><a href="#section3">Locations</a></li>
 			<li><a href="#section4">Student Registration</a></li>
-			<li><a href="#section5">Contact Us</a></li>
+			<li><a href="#section5">Query</a></li>
+			<li><a href="#section6">Contact Us</a></li>
 		</ul>		
 	</div>
 	<div data-role="footer"  style=" bottom:0;" data-theme="b">
@@ -149,6 +150,17 @@ function validateForm() {
 	   <h4>Rasmussen College &copy; 2015</h4>
 	</div>
 	</div>
+	
+<div id="section5" data-role="page" data-theme="b">
+	<div data-role="header" data-theme="b">
+	  <h1>Query</h1>
+		<a href="searchform.html" style="color:black">Back</a>  
+	</div>
+	
+	<div data-role="footer"  style=" bottom:0;" data-theme="b">
+	  <h4>Rasmussen College &copy; 2015</h4>
+	</div>
+</div>
 	
 <div data-role="page" id="section5" data-theme="b">
 	<div data-role="header" data-theme="b">
