--- a/www/searchform.html
+++ b/www/searchform.html
@@ -15,15 +15,22 @@
 <h1>
 	Search
 		</h1>	</div>
+		
 				<div data-role="content">
 
 		               <form method="post" action="find.php">
                   <table width="400" border="0" cellspacing="1" cellpadding="2">
                      
                      <tr>
-                        <td width="100"> </td>
+                        <td width="100">First Name</td>
+						<td><input name="fname" type="text" id="fname"></td>
+                     </tr>
+					   <tr>
+					   <td width="100">Last Name</td>
+                        <td><input name="lname" type="text" id="lname"></td>
+                     </tr>
                         <td>
-                           <input name="find" type="submit" id="add" value="Query the Database">
+                           <input name="find" type="submit" id="add" value="Search">
                         </td>
                      </tr>
 
