--- a/www/home.html
+++ b/www/home.html
@@ -154,7 +154,7 @@ function validateForm() {
 <div id="section5" data-role="page" data-theme="b">
 	<div data-role="header" data-theme="b">
 	  <h1>Query</h1>
-		<a href="searchform.html" style="color:black">Back</a>  
+		<a href="home.html" style="color:black">Back</a>  
 	</div>
 	
 	<div data-role="footer"  style=" bottom:0;" data-theme="b">
