--- a/www/home.html
+++ b/www/home.html
@@ -156,7 +156,9 @@ function validateForm() {
 	  <h1>Query</h1>
 		<a href="home.html" style="color:black">Back</a>  
 	</div>
-	
+	<div data-role="content">	
+		<a href="searchform.html"></a>
+	</div>
 	<div data-role="footer"  style=" bottom:0;" data-theme="b">
 	  <h4>Rasmussen College &copy; 2015</h4>
 	</div>
