--- a/www/home.html
+++ b/www/home.html
@@ -156,7 +156,7 @@ function validateForm() {
 	  <h1>Query</h1>
 		<a href="home.html" style="color:black">Back</a>  
 	</div>
-	<div data-include="searchform.html">	
+	<div data-include="/searchform.html">	
 		
 	</div>
 	<div data-role="footer"  style=" bottom:0;" data-theme="b">
