--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,12 @@
         <script type="text/javascript">
             app.initialize();
         </script>
+		<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
     </body>
 </html>
 Contact GitHub API Training Shop Blog About
