--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,8 @@
   data-share="true"
   data-width="450"
   data-show-faces="true">
-  
+  <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
 </div>
     </body>
 </html>
