--- a/www/index.html
+++ b/www/index.html
@@ -17,8 +17,8 @@
 
 	function show() {
 		var instance = new Notification(
-			"This is a Test  Notification for Module 05", {
-				body: "This is a test message for module 05"
+			"School Alert", {
+				body: "Assignments due coming up"
 			}
 		);
 
@@ -36,6 +36,8 @@
 		};
 	}
 </script>
+
+<button type="button" onclick="show()">Notify me!</button>
 
 <button type="button" onclick="show()">Notify me!</button>
 
