--- a/www/home.html
+++ b/www/home.html
@@ -56,7 +56,7 @@ $("#srchForm").load("./searchform.html");
 
 <div id="page" data-role="page" data-theme="b">
 	<div data-role="header" data-theme="b">
-	  <div class="logo"><img src="img/logolisa.png" width="200" height="100" alt=""/>
+	  <div class="logo"><img src="img/LOGO.png" width="200" height="100" alt=""/>
   </div>
 	</div>
 	<div data-role="content">	
