--- a/www/home.html
+++ b/www/home.html
@@ -84,6 +84,8 @@ $("#srchForm").load("./searchform.html");
 	 	</div>
 	
 	<div data-role="footer"  style=" bottom:0;" data-theme="b">
+  <div class="logo"><img src="img/LOGO.png" width="200" height="200" alt=""/>
+		
 	  <h4>lisa's Boutique &copy; 2017</h4>
 	</div>
 </div>
