--- a/www/home.html
+++ b/www/home.html
@@ -89,7 +89,7 @@ $("#srchForm").load("./searchform.html");
 	  <h4>lisa's Boutique &copy; 2017</h4>
 	</div>
 </div>
-
+ </div>
 <div id="section2" data-role="page" data-theme="b">
 	<div data-role="header" data-theme="b">
 		<h1>Store Login</h1>
