--- a/www/home.html
+++ b/www/home.html
@@ -115,7 +115,7 @@ $("#srchForm").load("./searchform.html");
 	  <h4>lisa's Boutique &copy; 2017</h4>
 	</div>
 </div>
-
+ </div>
 <div id="section3" data-role="page" data-theme="b">
 	<div data-role="header" data-theme="b">
 		<h1>Locations</h1>
@@ -131,7 +131,7 @@ $("#srchForm").load("./searchform.html");
 	   <h4>lisa's Boutique &copy; 2017</h4>
 	</div>
 </div>
-
+ </div>
 
 <div id="section4" data-role="page" data-theme="b">
 	<div data-role="header" data-theme="b">
@@ -171,7 +171,7 @@ $("#srchForm").load("./searchform.html");
 	   <h4>lisa's Boutique &copy; 2017</h4>
 	</div>
 	</div>
-	
+	 </div>
 <div id="section5" data-role="page" data-theme="b">
 	
 	<div data-role="header" data-theme="b">
