--- a/www/home.html
+++ b/www/home.html
@@ -209,7 +209,7 @@ $("#srchForm").load("./searchform.html");
 	   <h4>lisa's Boutique &copy; 2017</h4>
 	</div>
 	</div>
-
+</div>
 <div data-role="page" id="section6" data-theme="b">
 	<div data-role="header" data-theme="b">
 		<h1>Contact Us</h1>
@@ -236,6 +236,7 @@ $("#srchForm").load("./searchform.html");
 </form>	
 	</div>
 	<div data-role="footer"  style=" bottom:0;" data-theme="b">
+ <div class="logo"><img src="img/LOGO.png" width="200" height="200" alt=""/>
 
 		<h4>lisa's Boutique &copy; 2017</h4>
 	</div>
