--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
 		
 </script>
 
-<button type="button" onclick="show()">Notify me!</button>
+<h1>Lisa's Boutique</h1>
 
     </head>
     <body>
@@ -66,5 +66,5 @@
 </div>
     </body>
 </html>
-Contact GitHub API Training Shop Blog About
+
 © 2017 GitHub, Inc. Terms Privacy Security Status Help
