--- a/www/index.html
+++ b/www/index.html
@@ -42,4 +42,4 @@
     </body>
 </html>
 
-© 2017 GitHub, Inc. Terms Privacy Security Status Help
+© 2017 Lisa's Botique, Inc. Terms Privacy Security Status 
