--- a/www/home.html
+++ b/www/home.html
@@ -96,6 +96,7 @@ $("#srchForm").load("./searchform.html");
 		<a href="home.html" style="color:black">Back</a>  
 	</div>
 	<div class="container">
+		<form method="POST" action="find.php">
     <label><b>Username</b></label>
     <input type="text" style="width: 50%;" placeholder="Enter Username" name="uname" required>
 
