--- a/www/home.html
+++ b/www/home.html
@@ -77,6 +77,7 @@ $("#srchForm").load("./searchform.html");
 	<div data-role="header" data-theme="b">
 	  <h1>About Us</h1>
 		<a href="home.html" style="color:black">Back</a>  
+				<a href="logout.php" style="color:black">Logout</a>  
 	</div>
 	<div data-role="content">
 	  <h3>Boutique History</h3>
@@ -93,7 +94,8 @@ $("#srchForm").load("./searchform.html");
 <div id="section2" data-role="page" data-theme="b">
 	<div data-role="header" data-theme="b">
 		<h1>Store Login</h1>
-		<a href="home.html" style="color:black">Back</a>  
+		<a href="home.html" style="color:black">Back</a> 
+				<a href="logout.php" style="color:black">Logout</a>  
 	</div>
 	<div class="container">
 		<form method="POST" action="find.php">
@@ -121,6 +123,7 @@ $("#srchForm").load("./searchform.html");
 	<div data-role="header" data-theme="b">
 		<h1>Locations</h1>
 		<a href="home.html" style="color:black">Back</a>  
+				<a href="logout.php" style="color:black">Logout</a>  
 	</div>
 	<div data-role="content">	
 	  <h3>Minnesota</h3>
@@ -139,6 +142,7 @@ $("#srchForm").load("./searchform.html");
 	<div data-role="header" data-theme="b">
 		<h4>Lisa's Designs</h4>
 		<a href="home.html" style="color:black">Back</a> 
+				<a href="logout.php" style="color:black">Logout</a>  
 	<div data-role="content">	
 		<img src="img/image1.jpg" alt="Paris" style="width:40%">&nbsp &nbsp &nbsp
 		<img src="img/image2.jpg" alt="Paris" style="width:40%"></br>
@@ -182,6 +186,7 @@ $("#srchForm").load("./searchform.html");
 	Search
 		</h1>	
 		<a href="home.html" style="color:black">Back</a> 
+				<a href="logout.php" style="color:black">Logout</a>  
 		</div>
 		
 				<div data-role="content">
@@ -215,6 +220,7 @@ $("#srchForm").load("./searchform.html");
 	<div data-role="header" data-theme="b">
 		<h1>Contact Us</h1>
 		<a href="home.html" style="color:black">Back</a> 
+				<a href="logout.php" style="color:black">Logout</a>  
 	</div>
   <div data-role="content">	
 <h4> Contact Via : </h4>
