--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
          
                     </div>
         </div>
-
+<div> <a href="home.html"><font style="font-size: 100px;">Lisa's Botique</font></a>  </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
