--- a/www/home.html
+++ b/www/home.html
@@ -148,6 +148,7 @@ $("#srchForm").load("./searchform.html");
 		<img src="img/image2.jpg" alt="Paris" style="width:40%"></br>
 		<img src="img/image3.jpg" alt="Paris" style="width:40%">
 		<img src="img/image4.jpg" alt="Paris" style="width:40%">
+		<img src="img/image5.jpg" alt="Paris" style="width:40%">
 		
 		</div>
 
